[package]
name = "rktorrent"
version = "0.1.0"
edition = "2021"

[dependencies]
sha1 = "0.10.6"
reqwest = "0.12.9"
tokio = { version = "1.14.1", features = ["full"] }
public-ip = "0.2.2"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]